name:                monad-classes
version:             1.0
synopsis:            monad-classes is a more flexible mtl
-- description:
homepage:            https://github.com/feuerbach/monad-classes
license:             MIT
license-file:        LICENSE
author:              Roman Cheplyaka <roma@ro-che.info>
maintainer:          Roman Cheplyaka <roma@ro-che.info>
-- copyright:
category:            Control
build-type:          Simple
extra-source-files:
  README.md
cabal-version:       >=1.10

library
  exposed-modules:
    Control.Monad.MC
    Control.Monad.MC.Run
  other-modules:
    Control.Monad.MC.State,
    Control.Monad.MC.Core,
    Control.Monad.MC.Reader
  build-depends:
    base >=4.7,
    mmorph >= 1.0.3,
    transformers >=0.4,
    tagged >=0.7
  -- hs-source-dirs:
  default-language:    Haskell2010
  default-extensions:
    TypeFamilies,
    DataKinds,
    KindSignatures,
    FlexibleInstances,
    ScopedTypeVariables,
    FlexibleContexts,
    PolyKinds,
    ConstraintKinds,
    MultiParamTypeClasses
  ghc-options: -Wall
