name:                monad-classes
version:             0.1
synopsis:            more flexible mtl
-- description:
homepage:            https://github.com/feuerbach/monad-classes
license:             MIT
license-file:        LICENSE
author:              Roman Cheplyaka <roma@ro-che.info>
maintainer:          Roman Cheplyaka <roma@ro-che.info>
-- copyright:
category:            Control
build-type:          Simple
extra-source-files:
  README.md
cabal-version:       >=1.10

library
  exposed-modules:
    Control.Monad.Classes
    Control.Monad.Classes.Run
  other-modules:
    Control.Monad.Classes.State,
    Control.Monad.Classes.Writer,
    Control.Monad.Classes.Reader,
    Control.Monad.Classes.Except,
    Control.Monad.Classes.Exec,
    Control.Monad.Classes.Zoom,
    Control.Monad.Classes.Core,
    Control.Monad.Classes.Effects
  build-depends:
    base >=4.7,
    mmorph >= 1.0.3,
    transformers >=0.2,
    transformers-compat >= 0.3.1,
    reflection >= 1.4,
    tagged,
    ghc-prim
  -- hs-source-dirs:
  default-language:    Haskell2010
  default-extensions:
    TypeFamilies,
    DataKinds,
    KindSignatures,
    FlexibleInstances,
    ScopedTypeVariables,
    FlexibleContexts,
    PolyKinds,
    ConstraintKinds,
    MultiParamTypeClasses,
    TypeOperators,
    UndecidableInstances,
    MagicHash,
    GeneralizedNewtypeDeriving,
    RankNTypes
  ghc-options: -Wall

Test-suite test
  Default-language:
    Haskell2010
  Type:
    exitcode-stdio-1.0
  Hs-source-dirs:
    tests
  Main-is:
    test.hs
  Build-depends:
      base >= 4 && < 5
    , tasty >= 0.8
    , tasty-hunit
    , monad-classes
    , transformers
